--- a/css/_functions.scss
+++ b/css/_functions.scss
@@ -1,8 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Playfair+Display:wght@400;500&display=swap');
 
-@mixin cool-blue {
-    background-color: #244d6f;
-}
+
 
 @mixin flex-center {
     display: flex;
@@ -10,23 +8,35 @@
     align-items: center;
 }
 
+@mixin flex-direction-justify ($direction, $justify) {
+    display: flex;
+    flex-direction: $direction;
+    justify-content: $justify;
+}
+
 @mixin margin-padding-zero {
-    margin-left: 0;
-    margin-right: 0;
-    margin-top: 0;
-    margin-bottom: 0;
-    padding-left: 0;
-    padding-right: 0;
-    padding-top: 0;
-    padding-bottom: 0;
+    margin: 0;
+    padding: 0;
 }
 
 @mixin yellowtxt {
-    color: #f2ca90;
-    font-family: 'Playfair Display', serif;
+    color: $light-yellow;
+    font-family: $main-font;
+    text-decoration: none;
 }
 
-@mixin blacktxt {
-    color: black;
-    font-family: 'Courier New', Courier, monospace;
+
+@mixin text-color-size-weight-align($color,$size,$weight,$align) {
+    font-family:$main-font;
+    color: $color;
+    font-size: $size;
+    font-weight: $weight;
+    text-align: $align;
 }
+
+@mixin border($radius, $color, $style) {
+    border-radius: $radius;
+    border-color: $color;
+    border-style: $style;   
+}
+
