--- a/css/style.scss
+++ b/css/style.scss
@@ -1,64 +1,136 @@
 @import 'functions';
 
+@import 'variables';
+
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Playfair+Display:wght@400;500&display=swap');
 
 body {
-    @include margin-padding-zero;
+    @include margin-padding-zero; // tar bort allt vitt runt webbsidan
     height: 500vh;
-}
-
-h1 {
-    @include yellowtxt
+    scroll-behavior: smooth;
 }
 
 
-.header {
-    @include cool-blue;
+.header {   // Header with logo style
     @include margin-padding-zero;
     @include flex-center;
-    height: 75vh;
-    width: 100%;
+    background-color: $cool-blue;
+    height: 80vh;
+    
 }
+
+// navbar Style START
 
 #navbar {
     @include margin-padding-zero;
-    @include cool-blue;
+    @include flex-direction-justify(row, space-evenly);
+    background-color: $cool-blue;
     overflow: hidden;
-    height: 10vh;
-    position: sticky;
-}
-
-#navbar ul {
-    @include margin-padding-zero;
-    @include flex-center;
-    list-style-type: none;
-    padding: 0;
-}
-
-#navbar ul li a {
-    @include yellowtxt;
-    text-decoration: none;
-    text-align: center;
-    font-size: 2rem;
-    padding: 50px;
-}
-
-#navbar ul li:not(:first-child){
-    float: right;
-}
-
-.small-logo {
-    width: 10px;
-    height: 10px;
+    height: 6vw;
     
+    z-index: 1; // Gör så att navbaren hamnar över allt annat
+    transition: 0.5s; // gör animationen 0.5 sekunder lång
+}
+
+#navbar a {
+    @include yellowtxt;
+    text-align: center;
+    font-size: 2vw;
+    padding-top: 1.65vw;
+    transition: 0.4s;
+    
+}
+
+#navbar a:hover {
+    transform: scale(1.1);
 }
 
 .sticky {
     position: fixed;
     top: 0;
-    width: 100px;
+    width: 100%;
+    opacity: 0.91;
 }
 
+// Navbar Style END
+
 .img100-width {
-    width: 100vh;
+    width: 100%;
 } 
+
+.titleistdriver {
+    text-align: center;
+    position: relative;
+}
+
+.tsi-txt {
+    position: absolute;
+    top: 7vw;
+    right: 4vw;
+    @include text-color-size-weight-align(white,2vw, lighter, center)
+    
+}
+
+.deadspace {
+    height: 5vw;
+    @include margin-padding-zero;
+    background-color: $cool-blue;
+}
+
+
+// For golf club and balls style START
+
+.container {
+    @include flex-direction-justify(row, space-evenly);
+    padding-top: 2vw;
+    padding-bottom: 20vh;
+    flex-wrap: wrap; 
+    
+}
+
+.item {
+    background-color: #f5f5f5;
+    @include border(10px, gray, none);
+    border-bottom: black;
+    box-shadow: 2px 3px 10px gray;
+    width: 35vh;
+    height: 60vh;
+    margin-top: 2vw;
+    transition: 0.7s;
+}
+
+.item:hover {
+    transform: scale(1.07);
+    box-shadow: 2px 3px 20px black;
+    height: 62vh;
+    width: 37vh;
+}
+
+.item img {
+    width: 100%;
+    @include border(10px,gray,none);
+}
+
+.item h1 {
+    @include text-color-size-weight-align(black, 3vh, lighter, center);
+    text-align: center; 
+}
+
+.item p {
+    @include text-color-size-weight-align(black, 1.9vh, lighter, center);
+    
+}
+
+.item hr {
+    @include margin-padding-zero;
+}
+
+// golf club and balls info END
+
+.heading {
+    @include text-color-size-weight-align(black,7vh, normal, center);
+    position: relative;
+    margin-bottom: 4vw;
+    margin-top: 8vw;
+    
+}
