--- a/project/sass/style.css
+++ b/project/sass/style.css
@@ -44,13 +44,9 @@ body {
   width: 100%;
   background-color: #244d6f;
   overflow-y: hidden;
-  z-index: 1;
+  z-index: 3;
   -webkit-transition: 0.5s;
   transition: 0.5s;
-}
-
-#navbar:hover {
-  background-color: #1c3d58;
 }
 
 #navbar a {
@@ -67,6 +63,10 @@ body {
 #navbar a:hover {
   -webkit-transform: scale(1.08);
           transform: scale(1.08);
+}
+
+#navbar:hover {
+  background-color: #1c3d58;
 }
 
 .sticky {
@@ -223,21 +223,15 @@ body {
   border-radius: 10px;
   border-color: gray;
   border-style: none;
+  height: 65vh;
+  width: 37vh;
   background-color: #f5f5f5;
   -webkit-box-shadow: 2px 3px 10px gray;
           box-shadow: 2px 3px 10px gray;
-  width: 37vh;
-  height: 65vh;
+  z-index: 2;
   margin-top: 2vw;
   -webkit-transition: 0.5s;
   transition: 0.5s;
-}
-
-.item:hover {
-  -webkit-transform: scale(1.08);
-          transform: scale(1.08);
-  -webkit-box-shadow: 2px 3px 20px black;
-          box-shadow: 2px 3px 20px black;
 }
 
 .item img {
@@ -269,6 +263,13 @@ body {
   padding: 0;
 }
 
+.item:hover {
+  -webkit-transform: scale(1.08);
+          transform: scale(1.08);
+  -webkit-box-shadow: 2px 3px 20px black;
+          box-shadow: 2px 3px 20px black;
+}
+
 .heading {
   font-family: "Playfair Display", serif;
   color: black;
@@ -278,5 +279,38 @@ body {
   position: relative;
   margin-bottom: 3vw;
   margin-top: 3vw;
+}
+
+footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 20vh;
+  width: 100%;
+  font-family: "Playfair Display", serif;
+  color: #f2ca90;
+  font-size: 2rem;
+  font-weight: light;
+  text-align: center;
+  text-decoration: none;
+  background-color: #244d6f;
+  z-index: -1;
+}
+
+footer a {
+  text-decoration: none;
+  font-family: "Playfair Display", serif;
+  color: #f2ca90;
+  font-size: 1.2rem;
+  font-weight: light;
+  text-align: center;
+  border-right: 3px solid #f2ca90;
+  padding: 1vw;
 }
 /*# sourceMappingURL=style.css.map */
